dodanie rejestracji nowych uzytkowników i wyjebanie automatycznie dodanych rzeczy z google dzięki czemu kod jest zajebiście bardziej czytelny i nie wyskakują mi błędy z dupy na które tracę czas

--- a/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:textAllCaps="false"
-        android:text="Zarejestruj"
+        android:text="Rejestracja"
         android:id="@+id/registerButton"
         android:textSize="30dp"
         android:onClick="register"
