--- a/MOBILE/MyApplication/app/src/main/res/layout/group_spinner_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/group_spinner_layout.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:textColor="#ffffff"
     android:background="#1256ff"
-    android:layout_marginStart="15dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginRight="20dp"
     android:textSize="20dp"
     android:padding="10dp"
     />
