--- a/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
@@ -4,8 +4,13 @@
     android:background="@android:color/background_light">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_width="110dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/rounded"
+        android:textColor="#ffffff"
         android:textAllCaps="false"
         android:text="Zaloguj"
         android:id="@+id/loginButton"
@@ -13,19 +18,23 @@
         android:onClick="login"
         android:layout_below="@+id/passwordText"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_width="160dp"
+        android:layout_height="55dp"
         android:textAllCaps="false"
+        android:background="@drawable/rounded"
+        android:textColor="#ffffff"
         android:text="Rejestracja"
         android:id="@+id/registerButton"
         android:textSize="30dp"
         android:onClick="register"
         android:layout_below="@+id/passwordText"
         android:layout_toLeftOf="@+id/loginButton"
-        android:layout_toStartOf="@+id/loginButton" />
+        android:layout_toStartOf="@+id/loginButton"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
