--- a/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/login_layout.xml
@@ -16,7 +16,7 @@
         android:id="@+id/loginButton"
         android:textSize="30dp"
         android:onClick="login"
-        android:layout_below="@+id/passwordText"
+        android:layout_below="@+id/passwordTextView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="10dp" />
@@ -31,7 +31,7 @@
         android:id="@+id/registerButton"
         android:textSize="30dp"
         android:onClick="register"
-        android:layout_below="@+id/passwordText"
+        android:layout_below="@+id/passwordTextView"
         android:layout_toLeftOf="@+id/loginButton"
         android:layout_toStartOf="@+id/loginButton"
         android:layout_marginTop="10dp" />
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/passwordText"
+        android:id="@+id/passwordTextView"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
