--- a/MOBILE/MyApplication/app/src/main/res/layout/new_note_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/new_note_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,8 +16,8 @@
         android:textSize="35dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toLeftOf="@+id/editTools"
+        android:layout_toStartOf="@+id/editTools" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -24,9 +26,9 @@
         android:layout_below="@+id/addNoteNameText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_alignRight="@+id/addNoteNameText"
+        android:layout_alignEnd="@+id/addNoteNameText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,12 +57,15 @@
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:layout_marginTop="3dp"
-        android:layout_above="@+id/addNoteButton" />
+        android:layout_above="@+id/addNoteButton"
+        android:textColor="#000000"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dodaj"
+        android:text="Zapisz"
         android:id="@+id/addNoteButton"
         android:textAllCaps="false"
         android:layout_alignParentBottom="true"
@@ -73,7 +78,7 @@
         android:textSize="30dp"
         android:padding="7dp"
         android:layout_marginTop="5dp"
-        android:onClick="add" />
+        android:onClick="save" />
 
     <Button
         android:layout_width="wrap_content"
@@ -91,5 +96,20 @@
         android:layout_marginBottom="5dp"
         android:padding="7dp"
         android:onClick="cancel" />
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded"
+        android:src="@drawable/pencil_icon"
+        android:id="@+id/editTools"
+        android:scaleType="fitCenter"
+        android:padding="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:onClick="editTools" />
 
 </RelativeLayout>
