--- a/MOBILE/MyApplication/app/src/main/res/drawable/textview_border.xml
+++ b/MOBILE/MyApplication/app/src/main/res/drawable/textview_border.xml
@@ -3,4 +3,5 @@
     android:shape="rectangle" >
     <solid android:color="#ffffff" />
     <stroke android:width="1dip" android:color="#000000"/>
+    <corners android:radius="10dp" />
 </shape>
