--- a/MOBILE/MyApplication/app/src/main/res/layout/edit_user_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/edit_user_layout.xml
@@ -108,12 +108,12 @@
         android:textSize="30dp"
         android:text="Zatwierdź"
         android:id="@+id/confirmButton"
-        android:layout_below="@+id/confirmPasswordText"
+        android:onClick="confirm"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:onClick="confirm" />
+        android:layout_margin="5dp"
+        android:padding="3dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -124,9 +124,11 @@
         android:textSize="30dp"
         android:text="Anuluj"
         android:id="@+id/cancelButton"
-        android:layout_below="@+id/confirmPasswordText"
+        android:onClick="cancel"
+        android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/confirmButton"
         android:layout_toStartOf="@+id/confirmButton"
-        android:onClick="cancel" />
+        android:layout_marginBottom="5dp"
+        android:padding="3dp" />
 
 </RelativeLayout>
