--- a/MOBILE/MyApplication/app/src/main/res/layout/register_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/register_layout.xml
@@ -108,4 +108,19 @@
         android:textSize="30dp"
         android:layout_margin="10dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded"
+        android:text="Anuluj"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:padding="5dp"
+        android:onClick="cancel"
+        android:id="@+id/registerCancelButton"
+        android:layout_alignTop="@+id/button"
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button" />
+
 </RelativeLayout>
