--- a/MOBILE/MyApplication/app/src/main/res/layout/new_group_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/new_group_layout.xml
@@ -116,4 +116,21 @@
         android:layout_toStartOf="@+id/addGroupButton"
         android:layout_marginBottom="5dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Usuń użytkownika"
+        android:id="@+id/deleteGroupMemberButton"
+        android:background="@drawable/rounded"
+        android:textAllCaps="false"
+        android:layout_below="@+id/groupPassword2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:layout_margin="5dp"
+        android:onClick="deleteMember" />
+
 </RelativeLayout>
