--- a/MOBILE/MyApplication/app/src/main/res/layout/desktop_layout.xml
+++ b/MOBILE/MyApplication/app/src/main/res/layout/desktop_layout.xml
@@ -99,18 +99,18 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/groupButton"
-            android:layout_centerVertical="true"
             android:background="@drawable/rounded"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
             android:layout_toRightOf="@+id/textGroup"
-            android:layout_marginRight="20dp"
             android:paddingLeft="5dp"
             android:textColor="#ffffff"
             android:textAllCaps="false"
             android:textSize="20dp"
             android:text="notatki"
-            android:onClick="groups" />
+            android:onClick="groups"
+            android:layout_alignBottom="@+id/textGroup"
+            android:layout_alignTop="@+id/textGroup"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -126,15 +126,19 @@
             android:layout_marginRight="10dp" />
     </RelativeLayout>
 
-    <GridLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView2"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:id="@+id/layoutForNotes"
-        android:columnOrderPreserved="false"
-        android:columnCount="4"
-        android:padding="5dp"
-        android:onClick="menu"></GridLayout>
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/layoutForNotes"></LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
