--- a/WEB/public/css/note.css
+++ b/WEB/public/css/note.css
@@ -24,9 +24,9 @@ body {
     font-size: 35px;
     font-weight: bold;
 }
-.left-column, .right-column {
+.left-column {
     display: inline-block;
-    width: 40.5%;
+    width: 90.8%;
     margin-top: 0;
     vertical-align: top;
     font-size: 18px;
@@ -57,10 +57,16 @@ body {
     background: none;
     border: none;
 }
-input[type=submit], a.btn.btn-default {
+input[type=submit], .buttons {
     position: absolute;
     right: 20px;
     bottom: 20px;
+}
+.mce-container {
+    font-family: 'tinymce', Arial !important;
+}
+.mce-container * {
+    font-family: inherit;
 }
 .notes-list {
     margin: 0 0 0 55px;
