--- a/WEB/public/css/note.css
+++ b/WEB/public/css/note.css
@@ -26,7 +26,7 @@ body {
 }
 .left-column {
     display: inline-block;
-    width: 90.8%;
+    width: 40.5%;
     margin-top: 0;
     vertical-align: top;
     font-size: 18px;
@@ -104,4 +104,7 @@ input[type=submit], .buttons {
 /*Group*/
 .panel {
     padding: 0;
+}
+.error {
+    color: red;
 }
